[project]
name = "nonebot-plugin-repeater-count"
version = "0.1.0"
description = "NoneBot 复读行为统计插件"
authors = [
    { name = "name-is-hard-to-make", email = "3605587449@qq.com" },
]
dependencies = [
    "nonebot2>=2.0.0",
    "nonebot-adapter-onebot-v11>=2.2.0",
]
requires-python = ">=3.8"
readme = "README.md"

[project.license]
text = "MIT"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_engine"
